Added in JS file and some text to .cmp file

--- a/force-app/main/default/aura/myFirstComponent/myFirstComponent.cmp
+++ b/force-app/main/default/aura/myFirstComponent/myFirstComponent.cmp
@@ -4,4 +4,6 @@
     <strong>Testing Gut in SFDC DX using VSc Editor</strong>
     <h2>Added to when we tried committing the code using vsc to guthub</h2>
     <h2>Added to test commiting the code using VS Code terminal</h2>
+
+    <h2> This one added to push code using shortcut commands</h2>
 </aura:component>
